--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "\"My portfolio\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node watch.js",
+    "build" : "node gh-pages.js"
   },
   "author": "Nischay Sharma",
   "license": "ISC",
   "dependencies": {
     "chokidar": "^3.5.2",
     "ejs": "^3.1.6",
+    "gh-pages": "^3.2.3",
     "shelljs": "^0.8.4"
   }
 }
