Adding new components

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node run.js",
+    "build" : "node run.js build",
     "deploy": "cd utils && node gh-pages.js",
     "sass": "node-sass --watch src/scss -o dist/css --output-style compressed"
   },
@@ -13,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "chokidar": "^3.5.2",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
